<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_login"
        app:layout_constraintBottom_toTopOf="@+id/constr_BgLogin1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constr_BgLogin1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_gris_redounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/str_Login_To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/expletus_sans"
            android:text="@string/login_to_your_account"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_BgLogin2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_white_redounded"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/str_Login_To">

        </View>

        <TextView
            android:id="@+id/str_Welcome_Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_BgLogin2" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:elevation="5dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/str_Welcome_Back"
            app:startIconDrawable="@drawable/ic_at_email"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_input_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_inputs"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:elevation="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:endIconTint="@color/black"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_input_email"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_input_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_inputs"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constr_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_input_password">

            <CheckBox
                android:id="@+id/check_RememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:shadowColor="@color/black"
                android:text="@string/remember_me"
                android:textAllCaps="false"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/forget_password"
                android:textAlignment="textEnd"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/check_RememberMe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/check_RememberMe" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_buttons"
            android:onClick="btnLogin"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constr_buttons" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tv_orSignInWith"
                app:layout_constraintEnd_toStartOf="@id/tv_orSignInWith"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_orSignInWith" />

            <TextView
                android:id="@+id/tv_orSignInWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/or_sign_in_with"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dividerEnd"
                app:layout_constraintStart_toEndOf="@id/dividerStart"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tv_orSignInWith"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_orSignInWith"
                app:layout_constraintTop_toTopOf="@+id/tv_orSignInWith" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Google"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_buttons_grey"
            android:fontFamily="?textAppearanceButton"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/login_with_google"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:icon="@drawable/ic_google"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constr_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="10dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Google">

            <TextView
                android:id="@+id/tv_DontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/don_t_have_account"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_registerNow"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_registerNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/source_sans_pro"
                android:onClick="btnRegister"
                android:padding="7dp"
                android:text="@string/register_now"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/tv_DontHaveAccount"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>





















