<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/dialog_bg"
        android:contentDescription="@string/verify_login_data"
        android:elevation="10dp"
        android:padding="15dp"
        android:src="@drawable/ic_alert"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/dialog_bg"
        android:elevation="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ic_lock"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right|top"
            android:layout_margin="10dp"
            android:background="@drawable/bg_white_redounded"
            android:contentDescription="@string/login_error"
            android:src="@drawable/ic_lock"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/expletus_sans"
            android:text="@string/login_error"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/verify_login_data"
            android:textAppearance="?textAppearanceBody1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_Okay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_buttons"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/Okay"
            android:textAppearance="?textAppearanceButton"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>